# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "recipebox"
version = "0.1.0"
authors = ["Jay Thomas <jay@gfax.ch>"]
edition = "2021"

[dependencies]
actix-web = "4.2.1"
clap = { version = "4.0", features = ["derive"] }
form_urlencoded = "1.1.0"
handlebars = "4.3.5"
inquire = "0.5.2"
log = { version = "0.4.11", features = ["std"] }
matter = "0.1.0-alpha4"
mio = { version = "0.7.0", features = ["os-poll", "tcp"] }
pulldown-cmark = "0.9.2"
regex = "1.7.0"
serde = { version = "1.0", features = ["derive", "std"] }
simplelog = "0.12.0"
webpki = "0.21.0"

[dev-dependencies]
webpki-roots = "0.20.0"

[features]
